List fix + stops chart